# FlowCam

./: README.md
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.tsx  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/permissions/: get-pairing-info.toml  reset-session.toml
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src/components/: PairingCard.tsx  StatusBadge.tsx  VideoPanel.tsx
desktop/src/lib/: protocol.ts
mobile/: app.json  package.json
mobile/app/: _layout.tsx  index.tsx  scan.tsx  stream.tsx
mobile/lib/: pairing.ts  webrtc.ts
