[package]
name = "flowcam-desktop"
version = "0.1.0"
description = "FlowCam desktop receiver"
authors = ["nehrom-dev"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "flowcam_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.32"
local-ip-address = "0.6.10"
tokio = "1.50.0"
tokio-tungstenite = "0.28.0"
uuid = { version = "1.22.0", features = ["serde", "v4"] }

